--- a/src/plugins/serialnumber/public/settings.html
+++ b/src/plugins/serialnumber/public/settings.html
@@ -1,4 +1,4 @@
-<div id="serialnumber-settings">
+<div id="serialnumber-settings-content">
   <div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#plugin-settings" href="#collapseSerialnumber">
