Adding serial number to title

--- a/src/plugins/serialnumber/public/settings.html
+++ b/src/plugins/serialnumber/public/settings.html
@@ -8,6 +8,8 @@
     <div id="collapseSerialnumber" class="accordion-body collapse">
       <div class="accordion-inner">
         <div>
+          <strong>ROV board serial number: </strong><span data-bind="text: boardSerial"></span><br>
+          <strong>ROV body serial number: </strong><input type="text" class="input-medium" data-bind="value: rovSerial"><br>
 
         </div>
       </div>
