--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -47,7 +47,7 @@
             scripts.push('../plugins/example/public/js/example.js');
             scripts.push('../plugins/flybywire/public/js/flybywire.js');
         //  disabling FPS counter by default as the brower files need to be loaded
-        //    scripts.push('../plugins/fpscounter/public/js/fpscounter.js');
+            scripts.push('../plugins/fpscounter/public/js/fpscounter.js');
             scripts.push('../plugins/googletalk_ipregistration/public/js/googletalk_ipregistration.js');
             scripts.push('../plugins/headsup-menu/public/js/headsup-menu.js');
             scripts.push('../plugins/horizon/public/js/horizon.js');
