--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -7,5 +7,14 @@
     </div>
   </div>
   <div id="newui-video" class="full-height"></div>
-  <div id="newui-controlpad">sfsd</div>
+  <div id="newui-controlpad">
+
+    <div class="newui-item">
+      <div class="center">
+        <H4>Heading</H4>
+        <div id="newui-compass"></div>
+      </div>
+    </div>
+
+  </div>
 </div>
