--- a/src/plugins/example/public/tests/test.html
+++ b/src/plugins/example/public/tests/test.html
@@ -17,7 +17,10 @@
 <script src="../../../../../src/static/js/libs/jquery.min.js" type="text/javascript"></script>
 
 
+<script src="../js/example.js" type="text/javascript"></script>
 <script src="specs/example.spec.js" type="text/javascript"></script>
+
+
 <script>
 
   if (window.mochaPhantomJS) {
