--- a/src/plugins/example/public/tests/test.html
+++ b/src/plugins/example/public/tests/test.html
@@ -11,6 +11,7 @@
 <script src="../../../../../node_modules/mocha/mocha.js"></script>
 <script type="text/javascript" charset="utf-8">
   mocha.setup('bdd');
+
 </script>
 <script src="../../../../../node_modules/grunt-mocha/phantomjs/bridge.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../../node_modules/should/should.js" type="text/javascript" charset="utf-8"></script>
@@ -22,6 +23,7 @@
 
 
 <script>
+(function (window, $, undefined) {
 
   if (window.mochaPhantomJS) {
     mochaPhantomJS.run();
@@ -29,6 +31,8 @@
   else {
     mocha.run();
   }
+}(window, jQuery));
+
 </script>
 </body>
 </html>
