--- a/src/plugins/example/public/tests/test.html
+++ b/src/plugins/example/public/tests/test.html
@@ -23,7 +23,7 @@
 
 
 <script>
-(function (window, $, undefined) {
+$( document ).ready(function() {
 
   if (window.mochaPhantomJS) {
     mochaPhantomJS.run();
@@ -31,7 +31,8 @@
   else {
     mocha.run();
   }
-}(window, jQuery));
+});
+
 
 </script>
 </body>
