--- a/src/plugins/motor_diags/public/diagpanel.html
+++ b/src/plugins/motor_diags/public/diagpanel.html
@@ -46,7 +46,7 @@
                click: function(data, event) { $parent.setMotorTestSpeed('starbordMotorSpeed', $data)}"></button>
          </div>
          <label class="" for="reverse-starbord-thruster"><input type="checkbox" data-bind="checked: reverseStarbordThruster" />
-         Reverse Starbord Thruster
+         Reverse Starboard Thruster
          </label>
       </div>
    </div>
