Added note to use plugin-finder

--- a/src/system-plugins/plugin-finder/public/settings.html
+++ b/src/system-plugins/plugin-finder/public/settings.html
@@ -7,6 +7,7 @@
         </div>
         <div id="collapsePluginFinder" class="accordion-body collapse">
             <div class="accordion-inner">
+                <p>A direct internet connection to the ROV is required for installation to work.</p>
                 <input placeholder="Filter…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
                 <div class="pre-scrollable" data-bind="loadingWhen: isLoading() || isInstalling()">
                 <table class="table table-striped">
