--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -8,11 +8,11 @@
   </div>
   <div id="newui-video" class="full-height"></div>
   <div id="newui-controlpad">
-
-    <div class="newui-item">
+    <div class="newui-item" id="heading-item">
       <div class="center">
         <H4>Heading</H4>
-        <div id="newui-compass"></div>
+        <div id="newui-compass" class="center"></div>
+
       </div>
     </div>
 
