--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -12,7 +12,24 @@
       <div class="center">
         <H4>Heading</H4>
         <div id="newui-compass" class="center"></div>
-
+      </div>
+    </div>
+    <div class="newui-item" id="depth-item">
+      <div class="center">
+        <H4>Depth</H4>
+        <div id="newui-depth" class="center"></div>
+      </div>
+    </div>
+    <div class="newui-item" id="throttle-item">
+      <div class="center">
+        <H4>Throttle</H4>
+        <div id="newui-throttle" class="center"></div>
+      </div>
+    </div>
+    <div class="newui-item" id="switches-item">
+      <div class="center">
+        <H4>Switches</H4>
+        <div id="newui-switches" class="center"></div>
       </div>
     </div>
 
