--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -32,6 +32,12 @@
         <div id="newui-switches" class="center"></div>
       </div>
     </div>
+    <div class="newui-item" id="time-item">
+      <div class="center">
+        <H4>Time</H4>
+        <div id="newui-time" class="center"></div>
+      </div>
+    </div>
 
   </div>
 </div>
