--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -11,31 +11,31 @@
     <div class="newui-item" id="heading-item">
       <div class="center">
         <H4>Heading</H4>
-        <div id="newui-compass" class="center"></div>
+        <div id="newui-compass" class="center control"></div>
       </div>
     </div>
     <div class="newui-item" id="depth-item">
       <div class="center">
         <H4>Depth</H4>
-        <div id="newui-depth" class="center"></div>
+        <div id="newui-depth" class="center control"></div>
       </div>
     </div>
     <div class="newui-item" id="throttle-item">
       <div class="center">
         <H4>Throttle</H4>
-        <div id="newui-throttle" class="center"></div>
+        <div id="newui-throttle" class="center control"></div>
       </div>
     </div>
     <div class="newui-item" id="switches-item">
       <div class="center">
         <H4>Switches</H4>
-        <div id="newui-switches" class="center"></div>
+        <div id="newui-switches" class="center control"></div>
       </div>
     </div>
     <div class="newui-item" id="time-item">
       <div class="center">
         <H4>Time</H4>
-        <div id="newui-time" class="center"></div>
+        <div id="newui-time" class="center control"></div>
       </div>
     </div>
 
