Moving time component to polymer

--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -1,3 +1,4 @@
+
 <div id="newui-body">
   <div id="newui-container" class="full-height">
     <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
@@ -35,7 +36,9 @@
     <div class="newui-item" id="time-item">
       <div class="center">
         <H4>Time</H4>
-        <div id="newui-time" class="center control"></div>
+        <div id="newui-time" class="center control">
+          <newui-time></newui-time>
+        </div>
       </div>
     </div>
 
