moving compass to polymer

--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -1,4 +1,3 @@
-
 <div id="newui-body">
   <div id="newui-container" class="full-height">
     <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
@@ -12,7 +11,9 @@
     <div class="newui-item" id="heading-item">
       <div class="center">
         <H4>Heading</H4>
-        <div id="newui-compass" class="center control"></div>
+        <div id="newui-compass" class="center control">
+          <newui-compass heading="200" bearing="180"></newui-compass>
+        </div>
       </div>
     </div>
     <div class="newui-item" id="depth-item">
